--- a/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/ingress.yaml
+++ b/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/ingress.yaml
@@ -3,9 +3,9 @@ kind: Ingress
 metadata:
   name: zwavejs
   namespace: home-automation
-  annotations:
-    nginx.ingress.kubernetes.io/auth-signin: https://oauth.${PRIVATE_DOMAIN}/oauth2/start?rd=$escaped_request_uri
-    nginx.ingress.kubernetes.io/auth-url: https://oauth.${PRIVATE_DOMAIN}/oauth2/auth
+  # annotations:
+  #   nginx.ingress.kubernetes.io/auth-signin: https://oauth.${PRIVATE_DOMAIN}/oauth2/start?rd=$escaped_request_uri
+  #   nginx.ingress.kubernetes.io/auth-url: https://oauth.${PRIVATE_DOMAIN}/oauth2/auth
 spec:
   ingressClassName: nginx
   rules:
