update ldap config

--- a/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
@@ -20,10 +20,10 @@ spec:
           verbose_logging = true
           [[servers]]
           host = "lldap.${PRIVATE_DOMAIN}"
-          port = 389
-          use_ssl = false
+          port = 636
+          use_ssl = true
           start_tls = false
-          ssl_skip_verify =  true
+          ssl_skip_verify =  false
           bind_dn = "uid=admin,ou=people,{{ .LDAP_ROOT }}"
           bind_password = "{{ .LDAP_PASSWORD }}"
 
