--- a/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
@@ -22,7 +22,7 @@ spec:
           host = "lldap.${PRIVATE_DOMAIN}"
           port = 636
           use_ssl = true
-          start_tls = false
+          start_tls = true
           ssl_skip_verify =  false
           bind_dn = "uid=admin,ou=people,{{ .LDAP_ROOT }}"
           bind_password = "{{ .LDAP_PASSWORD }}"
