--- a/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
@@ -20,10 +20,10 @@ spec:
           verbose_logging = true
           [[servers]]
           host = "lldap.${PRIVATE_DOMAIN}"
-          port = 636
-          use_ssl = true
-          start_tls = true
-          ssl_skip_verify =  false
+          port = 389
+          use_ssl = false
+          start_tls = false
+          ssl_skip_verify = true
           bind_dn = "uid=admin,ou=people,{{ .LDAP_ROOT }}"
           bind_password = "{{ .LDAP_PASSWORD }}"
 
