--- a/kubernetes/apps/k0s/security/dex/app/externalsecret.yaml
+++ b/kubernetes/apps/k0s/security/dex/app/externalsecret.yaml
@@ -39,6 +39,11 @@ spec:
                     groupAttr: memberOf
                     nameAttr: cn
             staticClients:
+              - id: immich
+                name: immich
+                secret: "{{.IMMICH_CLIENT_SECRET}}"
+                redirectURIs:
+                  - "https://immich.${DOMAIN}/oauth2/callback"
               - id: oauth2-proxy
                 name: oauth2-proxy
                 secret: "{{.OAUTH2_CLIENT_SECRET}}"
@@ -57,3 +62,5 @@ spec:
         key: /security/lldap
     - extract:
         key: /security/oauth2-proxy
+    - extract:
+        key: /security/dex
