test ldap connector

--- a/kubernetes/apps/k0s/security/dex/app/externalsecret.yaml
+++ b/kubernetes/apps/k0s/security/dex/app/externalsecret.yaml
@@ -18,26 +18,30 @@ spec:
         values.yaml: |
           config:
             connectors:
-              - type: ldap
-                id: ldap
-                name: LDAP
-                config:
-                  host: "lldap:389"
-                  bindDN: "uid={{.LLDAP_USER_DN}},ou=people,{{.LLDAP_LDAP_BASE_DN}}"
-                  bindPW: "{{.LLDAP_LDAP_USER_PASS}}"
-                  userSearch:
-                    baseDN: "ou=people,{{.LLDAP_LDAP_BASE_DN}}"
-                    filter: "(&({username_attribute}={input})(objectClass=person))"
-                    username: uid
-                    idAttr: uid
-                    emailAttr: mail
-                    nameAttr: uid
-                  groupSearch:
-                    baseDN: "ou=groups,{{.LLDAP_LDAP_BASE_DN}}"
-                    filter: "(member={dn})"
-                    userAttr: uid
-                    groupAttr: memberOf
-                    nameAttr: cn
+            - type: ldap
+              id: ldap
+              name: LDAP
+              config:
+                host: "lldap"
+                port: 636
+                insecureNoSSL: false
+                insecureSkipVerify: false
+                bindDN: "uid={{.LLDAP_USER_DN}},ou=people,{{.LLDAP_LDAP_BASE_DN}}"
+                bindPW: "{{.LLDAP_LDAP_USER_PASS}}"
+                userSearch:
+                  baseDN: "ou=people,{{.LLDAP_LDAP_BASE_DN}}"
+                  username: uid
+                  idAttr: uid
+                  emailAttr: mail
+                  nameAttr: displayName
+                  preferredUsernameAttr: uid
+                groupSearch:
+                  baseDN: "ou=groups,{{.LLDAP_LDAP_BASE_DN}}"
+                  filter: "(objectClass=groupOfUniqueNames)"
+                  userMatchers:
+                    - userAttr: DN
+                      groupAttr: member
+                  nameAttr: cn
             staticClients:
               - id: immich
                 name: immich
