--- a/kubernetes/apps/k0s/security/dex/app/externalsecret.yaml
+++ b/kubernetes/apps/k0s/security/dex/app/externalsecret.yaml
@@ -47,8 +47,9 @@ spec:
                 name: immich
                 secret: "{{.IMMICH_CLIENT_SECRET}}"
                 redirectURIs:
-                  - "https://immich.nucstack.com/oauth2/callback"
-                  - "https://immich.nucstack.com/auth/login"
+                  - app.immich:/
+                  - https://immich.nucstack.com/auth/login
+                  - https://immich.nucstack.com/user-settings
               - id: oauth2-proxy
                 name: oauth2-proxy
                 secret: "{{.OAUTH2_CLIENT_SECRET}}"
