--- a/kubernetes/apps/k0s/security/dex/app/externalsecret.yaml
+++ b/kubernetes/apps/k0s/security/dex/app/externalsecret.yaml
@@ -26,7 +26,7 @@ spec:
                 port: 636
                 insecureNoSSL: false
                 insecureSkipVerify: false
-                bindDN: "uid={{.LLDAP_USER_DN}},ou=people,{{.LLDAP_LDAP_BASE_DN}}"
+                bindDN: "uid=admin,ou=people,{{.LLDAP_LDAP_BASE_DN}}"
                 bindPW: "{{.LLDAP_LDAP_USER_PASS}}"
                 userSearch:
                   baseDN: "ou=people,{{.LLDAP_LDAP_BASE_DN}}"
