--- a/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/ingress.yaml
+++ b/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/ingress.yaml
@@ -3,11 +3,11 @@ kind: Ingress
 metadata:
   name: zwavejs
   namespace: home-automation
-  annotations:
-    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.logfold.com/oauth2/start?rd=https://zwavejs.nucstack.com/oauth2/callback"
-    nginx.ingress.kubernetes.io/auth-url: "https://oauth.logfold.com/oauth2/auth"
+  # annotations:
+  #   nginx.ingress.kubernetes.io/auth-signin: "https://oauth.logfold.com/oauth2/start?rd=https://zwavejs.nucstack.com/oauth2/callback"
+  #   nginx.ingress.kubernetes.io/auth-url: "https://oauth.logfold.com/oauth2/auth"
 spec:
-  ingressClassName: nginx
+  ingressClassName: vilium
   rules:
   - host: "zwavejs.${DOMAIN}"
     http:
