--- a/kubernetes/apps/k8s/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/home-automation/home-assistant/app/helmrelease.yaml
@@ -30,6 +30,8 @@ spec:
     - name: volsync
       namespace: volsync
   values:
+    hostNetwork: true
+    dnsPolicy: lusterFirstWithHostNet
     controller:
       type: statefulset
       annotations:
