--- a/kubernetes/apps/k8s/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/home-automation/home-assistant/app/helmrelease.yaml
@@ -31,7 +31,7 @@ spec:
       namespace: volsync
   values:
     hostNetwork: true
-    dnsPolicy: lusterFirstWithHostNet
+    dnsPolicy: clusterFirstWithHostNet
     controller:
       type: statefulset
       annotations:
