--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -21,6 +21,7 @@ resources:
   - ./jetstack.yaml
   - ./kyverno.yaml
   - ./metrics-server.yaml
+  - ./minio.yaml
   - ./node-feature-discovery.yaml
   - ./oauth2-proxy.yaml
   - ./piraeus.yaml
