--- a/kubernetes/apps/k0s/storage/minio-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/storage/minio-operator/app/helmrelease.yaml
@@ -34,5 +34,5 @@ spec:
       ingressClassName: "nginx"
       tls:
       - hosts:
-        - "minio-dashboard.${DOMAIN}"
-      host: "minio-dashboard.${DOMAIN}"
+        - "minio.${DOMAIN}"
+      host: "minio.${DOMAIN}"
