--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -127,6 +127,12 @@ tasks:
           bound_service_account_namespaces=security
           policies=security,default
           ttl=1440h
+      - echo "path \"secret/data/storage/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write storage -
+      - vault write auth/kubernetes/{{.ENVIRONMENT}}/role/storage
+          bound_service_account_names=vault-auth
+          bound_service_account_namespaces=storage
+          policies=security,storage,default
+          ttl=1440h
   # kv
   disable-kv:
     desc: disable kv secrets engine
