--- a/kubernetes/apps/k0s/storage/minio-operator/tenant/externalsecret.yaml
+++ b/kubernetes/apps/k0s/storage/minio-operator/tenant/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        config:
+        config: |
           env:
             MINIO_IDENTITY_LDAP_LOOKUP_BIND_DN: "uid=admin,ou=people,{{.LLDAP_LDAP_BASE_DN}}"
             MINIO_IDENTITY_LDAP_LOOKUP_BIND_PASSWORD: "{{.LLDAP_LDAP_USER_PASS}}"
