--- a/kubernetes/apps/k0s/storage/minio-operator/tenant/externalsecret.yaml
+++ b/kubernetes/apps/k0s/storage/minio-operator/tenant/externalsecret.yaml
@@ -14,6 +14,8 @@ spec:
     template:
       engineVersion: v2
       data:
+        CONSOLE_ACCESS_KEY: "{{.MINIO_CONSOLE_ACCESS_KEY}}"
+        CONSOLE_SECRET_KEY: "{{.MINIO_CONSOLE_SECRET_KEY}}"
         config: |
           env:
             MINIO_IDENTITY_LDAP_LOOKUP_BIND_DN: "uid=admin,ou=people,{{.LLDAP_LDAP_BASE_DN}}"
@@ -23,3 +25,5 @@ spec:
   dataFrom:
     - extract:
         key: /security/lldap
+    - extract:
+        key: /storage/minio
