--- a/kubernetes/apps/k0s/storage/minio-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/storage/minio-operator/app/helmrelease.yaml
@@ -26,7 +26,8 @@ spec:
   uninstall:
     keepHistory: false
   values:
-    replicas: 1
+    operator:
+      replicaCount: 1
     console:
       ingress:
         enabled: true
