--- a/kubernetes/apps/k0s/storage/minio-operator/tenant/externalsecret.yaml
+++ b/kubernetes/apps/k0s/storage/minio-operator/tenant/externalsecret.yaml
@@ -14,14 +14,14 @@ spec:
     template:
       engineVersion: v2
       data:
-        CONSOLE_ACCESS_KEY: "{{.CONSOLE_ACCESS_KEY}}"
-        CONSOLE_SECRET_KEY: "{{.CONSOLE_SECRET_KEY}}"
         config: |
           env:
             MINIO_IDENTITY_LDAP_LOOKUP_BIND_DN: "uid=admin,ou=people,{{.LLDAP_LDAP_BASE_DN}}"
             MINIO_IDENTITY_LDAP_LOOKUP_BIND_PASSWORD: "{{.LLDAP_LDAP_USER_PASS}}"
             MINIO_IDENTITY_LDAP_USER_DN_SEARCH_BASE_DN: "{{.LLDAP_LDAP_BASE_DN}}"
             MINIO_IDENTITY_LDAP_GROUP_SEARCH_BASE_DN: "ou=groups,{{.LLDAP_LDAP_BASE_DN}}"
+            MINIO_ROOT_USER: "{{.ROOT_USER}}"
+            MINIO_ROOT_PASSWORD: "{{.ROOT_PASSWORD}}"
   dataFrom:
     - extract:
         key: /security/lldap
