--- a/kubernetes/apps/k0s/storage/minio-operator/tenant/externalsecret.yaml
+++ b/kubernetes/apps/k0s/storage/minio-operator/tenant/externalsecret.yaml
@@ -16,6 +16,9 @@ spec:
       data:
         config: |
           env:
+            MINIO_IDENTITY_LDAP_SERVER_ADDR: "lldap.${DOMAIN}:636"
+            MINIO_IDENTITY_LDAP_USER_DN_SEARCH_FILTER: "(uid=%s)"
+            MINIO_IDENTITY_LDAP_GROUP_SEARCH_FILTER: "(member=%d)"
             MINIO_IDENTITY_LDAP_LOOKUP_BIND_DN: "uid=admin,ou=people,{{.LLDAP_LDAP_BASE_DN}}"
             MINIO_IDENTITY_LDAP_LOOKUP_BIND_PASSWORD: "{{.LLDAP_LDAP_USER_PASS}}"
             MINIO_IDENTITY_LDAP_USER_DN_SEARCH_BASE_DN: "{{.LLDAP_LDAP_BASE_DN}}"
