update colsole access keys

--- a/kubernetes/apps/k0s/storage/minio-operator/tenant/externalsecret.yaml
+++ b/kubernetes/apps/k0s/storage/minio-operator/tenant/externalsecret.yaml
@@ -14,6 +14,8 @@ spec:
     template:
       engineVersion: v2
       data:
+        CONSOLE_ACCESS_KEY: "{{.CONSOLE_ACCESS_KEY}}"
+        CONSOLE_SECRET_KEY: "{{.CONSOLE_SECRET_KEY}}"
         config: |
           env:
             MINIO_IDENTITY_LDAP_SERVER_ADDR: "lldap.${DOMAIN}:636"
