--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -179,6 +179,8 @@ tasks:
       - vault kv put -mount=secret storage/minio
           ROOT_USER="{{.MINIO_ROOT_USER}}"
           ROOT_PASSWORD="{{.MINIO_ROOT_PASSWORD}}"
+          CONSOLE_ACCESS_KEY="{{.MINIO_CONSOLE_ACCESS_KEY}}"
+          CONSOLE_SECRET_KEY="{{.MINIO_CONSOLE_SECRET_KEY}}"
       # volsync
       - vault kv put -mount=secret volsync/volsync
           RESTIC_URL="{{.RESTIC_URL}}"
