--- a/kubernetes/apps/k0s/storage/minio-operator/tenant/externalsecret.yaml
+++ b/kubernetes/apps/k0s/storage/minio-operator/tenant/externalsecret.yaml
@@ -16,17 +16,18 @@ spec:
       data:
         CONSOLE_ACCESS_KEY: "{{.CONSOLE_ACCESS_KEY}}"
         CONSOLE_SECRET_KEY: "{{.CONSOLE_SECRET_KEY}}"
-        config: |
-          env:
-            MINIO_IDENTITY_LDAP_SERVER_ADDR: "lldap.${DOMAIN}:636"
-            MINIO_IDENTITY_LDAP_USER_DN_SEARCH_FILTER: "(uid=%s)"
-            MINIO_IDENTITY_LDAP_GROUP_SEARCH_FILTER: "(member=%d)"
-            MINIO_IDENTITY_LDAP_LOOKUP_BIND_DN: "uid=admin,ou=people,{{.LLDAP_LDAP_BASE_DN}}"
-            MINIO_IDENTITY_LDAP_LOOKUP_BIND_PASSWORD: "{{.LLDAP_LDAP_USER_PASS}}"
-            MINIO_IDENTITY_LDAP_USER_DN_SEARCH_BASE_DN: "{{.LLDAP_LDAP_BASE_DN}}"
-            MINIO_IDENTITY_LDAP_GROUP_SEARCH_BASE_DN: "ou=groups,{{.LLDAP_LDAP_BASE_DN}}"
-            MINIO_ROOT_USER: "{{.ROOT_USER}}"
-            MINIO_ROOT_PASSWORD: "{{.ROOT_PASSWORD}}"
+        config.env: |-
+          export MINIO_STORAGE_CLASS_STANDARD="EC:2"
+          export MINIO_BROWSER="on"
+          export MINIO_IDENTITY_LDAP_SERVER_ADDR="lldap.${DOMAIN}:636"
+          export MINIO_IDENTITY_LDAP_USER_DN_SEARCH_FILTER="(uid=%s)"
+          export MINIO_IDENTITY_LDAP_GROUP_SEARCH_FILTER="(member=%d)"
+          export MINIO_IDENTITY_LDAP_LOOKUP_BIND_DN="uid=admin,ou=people,{{.LLDAP_LDAP_BASE_DN}}"
+          export MINIO_IDENTITY_LDAP_LOOKUP_BIND_PASSWORD="{{.LLDAP_LDAP_USER_PASS}}"
+          export MINIO_IDENTITY_LDAP_USER_DN_SEARCH_BASE_DN="{{.LLDAP_LDAP_BASE_DN}}"
+          export MINIO_IDENTITY_LDAP_GROUP_SEARCH_BASE_DN="ou=groups,{{.LLDAP_LDAP_BASE_DN}}"
+          export MINIO_ROOT_USER="{{.ROOT_USER}}"
+          export MINIO_ROOT_PASSWORD="{{.ROOT_PASSWORD}}"
   dataFrom:
     - extract:
         key: /security/lldap
