--- a/kubernetes/apps/k0s/storage/minio-operator/tenant/externalsecret.yaml
+++ b/kubernetes/apps/k0s/storage/minio-operator/tenant/externalsecret.yaml
@@ -26,6 +26,8 @@ spec:
           export MINIO_IDENTITY_LDAP_LOOKUP_BIND_PASSWORD="{{.LLDAP_LDAP_USER_PASS}}"
           export MINIO_IDENTITY_LDAP_USER_DN_SEARCH_BASE_DN="{{.LLDAP_LDAP_BASE_DN}}"
           export MINIO_IDENTITY_LDAP_GROUP_SEARCH_BASE_DN="ou=groups,{{.LLDAP_LDAP_BASE_DN}}"
+          export MINIO_ROOT_USER="{{.ROOT_USER}}"
+          export MINIO_ROOT_PASSWORD="{{.ROOT_PASSWORD}}"
   dataFrom:
     - extract:
         key: /security/lldap
