--- a/kubernetes/apps/k0s/storage/minio-operator/tenant/tenant-db-backup.yaml
+++ b/kubernetes/apps/k0s/storage/minio-operator/tenant/tenant-db-backup.yaml
@@ -1,12 +1,34 @@
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: db-backup-secret
+  namespace: storage
+spec:
+  refreshInterval: "30m"
+  secretStoreRef:
+    name: vault-kv-backend
+    kind: SecretStore
+  target:
+    name: db-backup-secret
+    template:
+      engineVersion: v2
+      data:
+        CONSOLE_ACCESS_KEY: "{{.CONSOLE_ACCESS_KEY}}"
+        CONSOLE_SECRET_KEY: ""
+  dataFrom:
+    - extract:
+        key: /storage/minio
+---
 apiVersion: minio.min.io/v2
 kind: Tenant
 metadata:
-  name: minio
+  name: db-backup
   namespace: storage
 spec:
   pools:
-    - servers: 4
-      name: minio
+    - servers: 3
+      name: db-backup
       volumesPerServer: 1
       volumeClaimTemplate:
         metadata:
@@ -17,7 +39,7 @@ spec:
             - ReadWriteOnce
           resources:
             requests:
-              storage: 2Gi
+              storage: 5Gi
       securityContext:
         runAsUser: 1000
         runAsGroup: 1000
@@ -27,11 +49,11 @@ spec:
         runAsUser: 1000
         runAsGroup: 1000
         runAsNonRoot: true
+  configuration:
+    name: minio-tenant-secret
   users:
-    - name: minio-tenant-secret
+    - name: db-backup-secret
   buckets:
     - name: "db-backup"
       region: "us-east-1"
       objectLock: true
-  configuration:
-    name: minio-tenant-secret
