--- a/kubernetes/apps/k0s/security/lldap/database/cluster.yaml
+++ b/kubernetes/apps/k0s/security/lldap/database/cluster.yaml
@@ -39,7 +39,7 @@ spec:
         compression: bzip2
         maxParallel: 8
       destinationPath: s3://db-backup/lldap
-      endpointURL: "https://minio.${LOCAL_DOMAIN}"
+      endpointURL: "https://minio.${DOMAIN}"
       serverName: &currentCluster lldap-2
       s3Credentials:
         accessKeyId:
@@ -52,7 +52,7 @@ spec:
   - name: *previousCluster
     barmanObjectStore:
       destinationPath: s3://db-backup/lldap
-      endpointURL: "https://minio.${LOCAL_DOMAIN}"
+      endpointURL: "https://minio.${DOMAIN}"
       s3Credentials:
         accessKeyId:
           name: lldap-database-superuser
