--- a/kubernetes/apps/k0s/storage/restic/app/kustomization.yaml
+++ b/kubernetes/apps/k0s/storage/restic/app/kustomization.yaml
@@ -2,10 +2,6 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: storage
 resources:
-  # Pre Flux-Kustomizations  
-  - ./namespace.yaml
-  - ./externalsecret.yaml
-  # Flux-Kustomizations
-  - ./minio-operator/ks.yaml
-  - ./restic/ks.yaml
+  - ./helmrelease.yaml
