test external ingress

--- a/kubernetes/bootstrap/k0s/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/k0s/sharedsecrets.yaml
@@ -21,6 +21,7 @@ stringData:
   VAULT_ADDR: "${VAULT_ADDR}"
   VIP_IP: "${VIP_IP}"
   VIP_PORT: "${VIP_PORT}"
+  INGRESS_PROXMOX_IP: "${INGRESS_PROXMOX_IP}"
 ---
 apiVersion: v1
 kind: Namespace
