fix backend protocol

--- a/kubernetes/apps/k0s/ingress/nginx/external-ingress/proxmox.yaml
+++ b/kubernetes/apps/k0s/ingress/nginx/external-ingress/proxmox.yaml
@@ -31,6 +31,8 @@ kind: Ingress
 metadata:
   name: proxmox
   namespace: ingress
+  annotations:
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
   ingressClassName: nginx
   rules:
