--- a/kubernetes/apps/k0s/ingress/nginx/external-ingress/proxmox.yaml
+++ b/kubernetes/apps/k0s/ingress/nginx/external-ingress/proxmox.yaml
@@ -16,7 +16,7 @@ spec:
 apiVersion: v1
 kind: Endpoints
 metadata:
-  name: external-ip
+  name: proxmox
   namespace: ingress
 subsets:
 - addresses:
