--- a/kubernetes/bootstrap/k0s/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/k0s/sharedsecrets.yaml
@@ -21,7 +21,10 @@ stringData:
   VAULT_ADDR: "${VAULT_ADDR}"
   VIP_IP: "${VIP_IP}"
   VIP_PORT: "${VIP_PORT}"
+  INGRESS_DRAC_IP: "${INGRESS_DRAC_IP}"
   INGRESS_PROXMOX_IP: "${INGRESS_PROXMOX_IP}"
+  INGRESS_UNIFI_IP: "${INGRESS_UNIFI_IP}"
+  INGRESS_VACUUM_IP: "${INGRESS_VACUUM_IP}"
 ---
 apiVersion: v1
 kind: Namespace
