--- a/kubernetes/apps/k0s/ingress/nginx/external-ingress/kustomization.yaml
+++ b/kubernetes/apps/k0s/ingress/nginx/external-ingress/kustomization.yaml
@@ -4,6 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./drac.yaml
+  - ./kvm.yaml
   - ./proxmox.yaml
   - ./unifi.yaml
   - ./vacuum.yaml
