--- a/kubernetes/bootstrap/k0s/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/k0s/sharedsecrets.yaml
@@ -22,6 +22,7 @@ stringData:
   VIP_IP: "${VIP_IP}"
   VIP_PORT: "${VIP_PORT}"
   INGRESS_DRAC_IP: "${INGRESS_DRAC_IP}"
+  INGRESS_KVM_IP: "${INGRESS_KVM_IP}"
   INGRESS_PROXMOX_IP: "${INGRESS_PROXMOX_IP}"
   INGRESS_UNIFI_IP: "${INGRESS_UNIFI_IP}"
   INGRESS_VACUUM_IP: "${INGRESS_VACUUM_IP}"
